syntax = "proto3";
package wallet;
option go_package = "./wallet";


import "google/protobuf/empty.proto";

enum TransactionType {
    CREDIT = 0;
    DEBIT = 1;
}

message CreateWalletRequest {
    int32 account_id = 1;
    int32 previous_balance = 2;
    int32 current_balance = 3;
}

message RetrieveWalletRequest {
    int32 account_id = 1;
}

message UpdateWalletRequest {
    int32 account_id = 1;
    int32 previous_balance = 2;
    int32 current_balance = 3;
}

message RetrieveWalletResponse {
    int32 account_id = 1;
    int32 previous_balance = 2;
    int32 current_balance = 3;
}

service Wallet {
    rpc CreateWallet(CreateWalletRequest) returns (google.protobuf.Empty);
    rpc UpdateWallet(UpdateWalletRequest) returns (google.protobuf.Empty);
    rpc RetrieveWallet(RetrieveWalletRequest) returns (RetrieveWalletResponse);
}




